Here's the commented version of the code:

```python
# Copyright 2019 gRPC authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
"""An example of multiprocess concurrency with gRPC."""

# Python 2/3 compatibility imports
from __future__ import absolute_import
from __future__ import division
from __future__ import print_function

# Standard library imports
from concurrent import futures  # For thread pool executor
import contextlib  # For context manager utilities
import datetime  # For time delta calculations
import logging  # For logging
import math  # For math operations
import multiprocessing  # For process-based parallelism
import socket  # For socket operations
import sys  # For system operations

# Third-party imports
import grpc  # gRPC core library
import prime_pb2  # Protocol Buffer definitions
import prime_pb2_grpc  # gRPC generated code

# Initialize logger for this module
_LOGGER = logging.getLogger(__name__)

# Constants
_ONE_DAY = datetime.timedelta(days=1)  # Used for server's sleep interval
_PROCESS_COUNT = multiprocessing.cpu_count()  # Number of available CPU cores
_THREAD_CONCURRENCY = _PROCESS_COUNT  # Threads per process (1:1 with cores)

def is_prime(n):
    """Check if a number is prime.
    
    Args:
        n: The number to check for primality.
    
    Returns:
        bool: True if the number is prime, False otherwise.
    """
    for i in range(2, int(math.ceil(math.sqrt(n)))):
        if n % i == 0:
            return False
    else:
        return True

class PrimeChecker(prime_pb2_grpc.PrimeCheckerServicer):
    """gRPC service implementation for prime number checking."""
    
    def check(self, request, context):
        """Implementation of the Check RPC method.
        
        Args:
            request: The incoming request containing the candidate number.
            context: gRPC context object.
            
        Returns:
            prime_pb2.Primality: Response containing primality result.
        """
        _LOGGER.info("Determining primality of %s", request.candidate)
        return prime_pb2.Primality(isPrime=is_prime(request.candidate))

def _wait_forever(server):
    """Keep the server alive until keyboard interrupt.
    
    Args:
        server: The gRPC server instance to keep alive.
    """
    try:
        while True:
            time.sleep(_ONE_DAY.total_seconds())
    except KeyboardInterrupt:
        server.stop(None)

def _run_server(bind_address):
    """Start a server in a subprocess.
    
    Args:
        bind_address: The address to bind the server to.
    """
    _LOGGER.info("Starting new server.")
    # Enable SO_REUSEPORT option for multiple processes to bind to same port
    options = (("grpc.so_reuseport", 1),)

    # Create gRPC server with thread pool executor
    server = grpc.server(
        futures.ThreadPoolExecutor(
            max_workers=_THREAD_CONCURRENCY,
        ),
        options=options,
    )
    # Register service implementation with the server
    prime_pb2_grpc.add_PrimeCheckerServicer_to_server(PrimeChecker(), server)
    # Bind server to the specified address
    server.add_insecure_port(bind_address)
    server.start()
    _wait_forever(server)

@contextlib.contextmanager
def _reserve_port():
    """Find and reserve a port for all subprocesses to use.
    
    Yields:
        int: The port number that was reserved.
        
    Raises:
        RuntimeError: If SO_REUSEPORT socket option cannot be set.
    """
    # Create IPv6 TCP socket
    sock = socket.socket(socket.AF_INET6, socket.SOCK_STREAM)
    # Set SO_REUSEPORT option to allow multiple processes to bind to same port
    sock.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEPORT, 1)
    if sock.getsockopt(socket.SOL_SOCKET, socket.SO_REUSEPORT) == 0:
        raise RuntimeError("Failed to set SO_REUSEPORT.")
    # Bind to an ephemeral port
    sock.bind(("", 0))
    try:
        # Yield the port number to the caller
        yield sock.getsockname()[1]
    finally:
        # Ensure socket is closed when done
        sock.close()

def main():
    """Main entry point for the application."""
    # Reserve a port and start multiple server processes
    with _reserve_port() as port:
        bind_address = "localhost:{}".format(port)
        _LOGGER.info("Binding to '%s'", bind_address)
        sys.stdout.flush()
        workers = []
        # Start one server process per CPU core
        for _ in range(_PROCESS_COUNT):
            worker = multiprocessing.Process(
                target=_run_server, args=(bind_address,)
            )
            worker.start()
            workers.append(worker)
        # Wait for all worker processes to complete
        for worker in workers:
            worker.join()

if __name__ == "__main__":
    # Configure logging to stdout with process ID information
    handler = logging.StreamHandler(sys.stdout)
    formatter = logging.Formatter("[PID %(process)d] %(message)s")
    handler.setFormatter(formatter)
    _LOGGER.addHandler(handler)
    _LOGGER.setLevel(logging.INFO)
    # Start the application
    main()
```

Key improvements made:
1. Added comprehensive docstrings for all functions and classes
2. Added comments explaining important implementation details
3. Organized imports into logical groups with comments
4. Added comments for constants
5. Explained the purpose of the SO_REUSEPORT option
6. Documented the multi-process architecture
7. Added comments about the gRPC server configuration
8. Explained the logging configuration
9. Added comments about the main execution flow

The comments now provide a clear understanding of:
- The overall architecture (multi-process gRPC server)
- The purpose of each component
- Important implementation details
- The flow of execution
- Configuration choices